2015-07-14  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.c: Remove inclusion of "board.h".

	* tool/neug_check.py (field): New field 'Board'.
	* src/{sys.c,sys.h}: Update to 2.1 from chopstx.
	* src/main.c (main): Determine flash page size at runtime.
	(usbbuf): New.  Use for passwd and string transfer.
	(usb_cb_get_descriptor): Support sys_board_name.
	* src/neug.ld.in: Update for sys 2.1.

2015-07-11  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (.fill_ffff): Add ALIGN 2.

2015-07-08  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.06.

	* src/configure (help): Add other boards.

2015-06-30  Niibe Yutaka  <gniibe@fsij.org>

	* tool/neug_check.py: Fix raise and print statements.

	* tool/neug_upgrade.py: Support upgrade with passwd.
	(neug.set_passwd): New.

	* src/main.c (USB_NEUG_SET_PASSWD): New.
	(set_passwd): New.
	(usb_cb_ctrl_write_finish, usb_cb_setup): Handle
	USB_NEUG_SET_PASSWD and USB_NEUG_EXIT with passwd.

	* src/neug.ld.in (flash): A page for passwd.

	* src/config.h.in (@SERIALNO_STR_LEN_DEFINE@): Rename.
	* src/configure (SERIALNO_STR_LEN_DEFINE): Rename.

	* src/configure (help): Add CQ_STARM.

2015-06-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (help): Add STM32_PRIMER2.

	* src/sys.c: Update from chopstx/example-cdc/sys.c.

2015-03-17  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.1c.

2015-03-17  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.1b.

	* src/configure: Call configure of Fraucheky with REVISION,
	REVISION_CHOPSTX, REVISION_FRAUCHEKY.

2015-03-12  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.1a.

	* src/main.c (fill_serial_no_by_unique_id): Use bits in higher
	address.

2015-01-29  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.1.

2015-01-28  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STBEE, board/STBEE_MINI: Remove.

2015-01-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (build/neug.o, build/sha256.o): Use -O3.

2015-01-21  Niibe Yutaka  <gniibe@fsij.org>
